samples/_failures_safe/1761693479_6d2591_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8ee058d.c: In function ‘main’:
./samples/SAFE/__tmp_c8ee058d.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\nMatrix 1:\n");
      |     ^~~~~~
